// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<div>
  <hr
    class="divider"
    role="none"
  />
</div>
`;

exports[`Divider when large renders 1`] = `
<div>
  <hr
    class="divider large"
    role="none"
  />
</div>
`;

exports[`Divider when large when also vertical renders 1`] = `
<div>
  <div
    class="divider large vertical"
    role="none"
  />
</div>
`;
